--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,37 +1,36 @@
-<nav class="navbar navbar-static-top navbar-default" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="container">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <%= link_to "Petrohub", root_path, class: "navbar-brand" %>
-  </div>
-
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav navbar-right">
-      <% if user_signed_in? %>
-          <li>
-
-
-
-          <%end%>
-          </li>
-
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "About", pages_about_path %></li>
-      <% if user_signed_in? %>
-        
-        <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
-      <% else %>
-        <li><%= link_to "Sign in", new_user_session_path %></li>
-
-      <% end %>
-    </ul>
-  </div><!-- /.navbar-collapse -->
-</div>
-</nav>
+<nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Petrohub</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Profile</a></li>
+            <% if retailer_signed_in? %>
+              <li><%= link_to "Account Settings", edit_retailer_registration_path %></li>
+              <li><%= link_to "Log Out", destroy_retailer_session_path, method: :delete %></li>
+           <% elsif supplier_signed_in? %>
+              <li><%= link_to "Account Settings", edit_supplier_registration_path %></li>
+              <li><%= link_to "Log Out", destroy_supplier_session_path, method: :delete %></li>
+        <%else%>
+        <li class="dropdown">
+           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sign In<span class="caret"></span></a>
+           <ul class="dropdown-menu">
+            <li><%= link_to "Retailer Sign In", retailer_session_path %></li>
+            <li><%= link_to "Supplier Sign In", supplier_session_path %></li>
+           </ul>
+       </li>
+        <% end %>
+          </ul>
+          <form class="navbar-form navbar-right">
+            <input type="text" class="form-control" placeholder="Search...">
+          </form>
+        </div>
+      </div>
+    </nav>
