--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,1 @@
-<div class="panel panel-primary">
-  <div class="panel-heading">
-    <h3 class="panel-title">Test panel</h3>
-  </div>
-  <div class="panel-body">
-    Test Panel
-  </div>
-</div>
+<h1>Home page</h1>
