--- a/app/views/retailers/dashboard.html.erb
+++ b/app/views/retailers/dashboard.html.erb
@@ -1,3 +1,4 @@
-<h1>Retailers#dashboard</h1>
-
-<p>Find me in app/views/retailers/dashboard.html.erb</p>
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+         <h1 class="page-header">Retailer's Dashboard</h1>
+        
+ </div>
