--- a/app/views/suppliers/dashboard.html.erb
+++ b/app/views/suppliers/dashboard.html.erb
@@ -1,2 +1,3 @@
-<h1>Suppliers#dashboard</h1>
-<p>Find me in app/views/suppliers/dashboard.html.erb</p>
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+         <h1 class="page-header">Supplier's Dashboard</h1>
+ </div>
