--- a/app/views/tanks/show.html.erb
+++ b/app/views/tanks/show.html.erb
@@ -21,4 +21,4 @@
 </p>
 
 <%= link_to 'Edit', edit_tank_path(@tank) %> |
-<%= link_to 'Back', tanks_path %>
+<%= link_to 'Back', station_tank_path %>
