--- a/app/views/layouts/_retailer_sidebar.html.erb
+++ b/app/views/layouts/_retailer_sidebar.html.erb
@@ -11,8 +11,8 @@
           <ul class='nav nav-stacked'>
             <li class=''>
               <%= link_to retailer_dashboard_path do %>
-                  <i class='icon-dashboard'></i>
-                  <span>Account# <%=current_retailer.account_number%></span>
+                  <i class='icon-tasks'></i>
+                  <span class = "text-error">Account# <%=current_retailer.account_number%></span>
               <% end %>
             </li>
             <li class=''>
