--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-dark">
         <div class="navbar-header">
           <a class="navbar-brand" href="/">Petrohub</a>
         </div>
