--- a/app/views/tanks/_form.html.erb
+++ b/app/views/tanks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@tank)do |f| %>
+<%= simple_form_for([@station, @tank])do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
