--- a/app/views/layouts/_supplier_sidebar.html.erb
+++ b/app/views/layouts/_supplier_sidebar.html.erb
@@ -1,19 +1,20 @@
 
-  <ul class="nav nav-sidebar">
-    <li class="active"><a class= "btn btn-primary btn-block"href="#">Supplier<span class="sr-only">(current)</span></a></li>
-    <li><a class= "btn btn-default" href="#">Reports</a></li>
-    <li><a class= "btn btn-default" href="#">Analytics</a></li>
-    <li><a class= "btn btn-default" href="#">Export</a></li>
-  </ul>
-  <ul class="nav nav-sidebar">
-    <li><a class= "btn btn-default" href="">Nav item</a></li>
-    <li><a class= "btn btn-default" href="">Nav item again</a></li>
-    <li><a class= "btn btn-default" href="">One more nav</a></li>
-    <li><a class= "btn btn-default" href="">Another nav item</a></li>
-    <li><a class= "btn btn-default" href="">More navigation</a></li>
-  </ul>
-  <ul class="nav nav-sidebar">
-    <li><a class= "btn btn-default" href="">Nav item again</a></li>
-    <li><a class= "btn btn-default" href="">One more nav</a></li>
-    <li><a class= "btn btn-default" href="">Another nav item</a></li>
-  </ul>
+        <div class='navigation'>
+          <div class='search'>
+            <form action='search_results.html' method='get'>
+              <div class='search-wrapper'>
+                <input value="" class="search-query form-control" placeholder="Search..." autocomplete="off" name="q" type="text" />
+                <button class='btn btn-link icon-search' name='button' type='submit'></button>
+              </div>
+            </form>
+          </div>
+          <ul class='nav nav-stacked'>
+            <li class=''>
+              <%= link_to supplier_dashboard_path do %>
+                  <i class='icon-tasks'></i>
+                  <span class = "text-error">Account# <%=current_supplier.account_number%></span>
+              <% end %>
+            </li>
+
+          </ul>
+        </div>
