--- a/app/views/layouts/_retailer_sidebar.html.erb
+++ b/app/views/layouts/_retailer_sidebar.html.erb
@@ -23,7 +23,7 @@
             </li>
             <li class=''>
               <%= link_to retailer_my_stations_path do %>
-                  <i class='icon-tasks'></i>
+                  <i class='icon-truck'></i>
                   <span>My Orders</span>
               <% end %>
             </li>
