--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-
+<div class="col-md-4 col-md-offset-4">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 
@@ -31,3 +31,4 @@
 <% end %>
 
 <%= link_to "Back", :back %>
+</div>
