--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-
+<div class="col-md-4 col-md-offset-4">
 <h2>Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -30,3 +30,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
