--- a/app/views/stations/new.html.erb
+++ b/app/views/stations/new.html.erb
@@ -9,6 +9,8 @@
         </div>
       </div>
     </div>
+    <div class="panel panel-default">
 <div class="col-md-4 col-md-offset-4">
 <%= render 'form' %>
+</div>
 </div>
