--- a/app/views/layouts/_supplier_sidebar.html.erb
+++ b/app/views/layouts/_supplier_sidebar.html.erb
@@ -1,13 +1,7 @@
-
+<div id="wrapper">
+  <div id='main-nav-bg'></div>
+      <nav class='main-nav-fixed' id='main-nav'>
         <div class='navigation'>
-          <div class='search'>
-            <form action='search_results.html' method='get'>
-              <div class='search-wrapper'>
-                <input value="" class="search-query form-control" placeholder="Search..." autocomplete="off" name="q" type="text" />
-                <button class='btn btn-link icon-search' name='button' type='submit'></button>
-              </div>
-            </form>
-          </div>
           <ul class='nav nav-stacked'>
             <li class=''>
               <%= link_to supplier_dashboard_path do %>
@@ -18,3 +12,5 @@
 
           </ul>
         </div>
+      </div>
+     </nav>
