--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -15,21 +15,8 @@
 </header>
             <%= render 'layouts/retailer_sidebar' if retailer_signed_in?  %>
             <%= render 'layouts/supplier_sidebar' if supplier_signed_in? %>
-
-      <section id='content'>
-        <div class='container'>
-          <div class='row' id='content-wrapper'>
-            <div class='col-xs-12'>
-              <% flash.each do |name, msg| %>
-                <%= content_tag(:div, msg, class: "alert alert-info") %>
-              <% end %>
-          <%= yield %>
-        </div>
-      </div>
-        </section>
-      </div>
-
-
-   </div>
+            <div class="container">
+<%= yield %>
+</div>
 </body>
 </html>
