--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,35 @@
 
-<div class='row'>
-      <div class='col-sm-12'>
-        <div class='page-header'>
-          <h1 class='pull-left'>
-            Home
-          </h1>
-        </div>
+<div class="jumbotron">
+     <div class="container">
+       <h1>Welcome to Petrohub!</h1>
+       <p>We make your everyday Gas orders and supply Very easy and smooth.</p>
+       <p><a class="btn btn-primary btn-lg" href="/pages/about" role="button">Learn more &raquo;</a></p>
+     </div>
+   </div>
+
+   <div class="container">
+     <!-- Example row of columns -->
+     <div class="row">
+       <div class="col-md-4">
+         <h2>Why us?</h2>
+         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+         <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+       </div>
+       <div class="col-md-4">
+         <h2>Who we are?</h2>
+         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+         <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
       </div>
-    </div>
+       <div class="col-md-4">
+         <h2>Features</h2>
+         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+         <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+       </div>
+     </div>
+
+     <hr>
+
+     <footer>
+       <p>&copy; 2015 Petrohub</p>
+     </footer>
+   </div>
