--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,14 @@
 <nav class="navbar navbar-dark">
         <div class="navbar-header">
+          <% if relailer_signed_in? %>
+          <a class="navbar-brand" href="/retailer/dashboard">Petrohub</a>
+          <% elsif supplier_signed_in? %>
+          <a class="navbar-brand" href="/supplier/dashboard">Petrohub</a>
+          <% elsif admin_signed_in? %>
+          <a class="navbar-brand" href="/admin/dashboard">Petrohub</a>
+          <% else %>
           <a class="navbar-brand" href="/">Petrohub</a>
+          <%end%>
         </div>
         <% if retailer_signed_in? || supplier_signed_in? %>
         <a class='toggle-nav btn pull-left' href='#'>
