--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark">
         <div class="navbar-header">
-          <% if relailer_signed_in? %>
+          <% if retailer_signed_in? %>
           <a class="navbar-brand" href="/retailer/dashboard">Petrohub</a>
           <% elsif supplier_signed_in? %>
           <a class="navbar-brand" href="/supplier/dashboard">Petrohub</a>
