--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 </header>
             <%= render 'layouts/retailer_sidebar' if retailer_signed_in?  %>
             <%= render 'layouts/supplier_sidebar' if supplier_signed_in? %>
-
+            <%= render 'layouts/admin_sidebar' if admin_signed_in? %>
       <section id='content'>
         <div class='container'>
           <div class='row' id='content-wrapper'>
