--- a/app/views/layouts/_supplier_sidebar.html.erb
+++ b/app/views/layouts/_supplier_sidebar.html.erb
@@ -6,7 +6,7 @@
             <li class=''>
               <%= link_to supplier_dashboard_path do %>
                   <i class='icon-tasks'></i>
-                  <span class = "text-error">Account# <%=current_supplier.account_number%></span>
+                  <span class = "text-error">Account# <%=current_user.account_number%></span>
               <% end %>
             </li>
 
