--- a/app/views/suppliers/dashboard.html.erb
+++ b/app/views/suppliers/dashboard.html.erb
@@ -3,7 +3,7 @@
         <div class='page-header'>
           <h1 class='pull-left'>
             <i class='icon-dashboard'></i>
-            <span><%=current_supplier.first_name%>'s Dashboard</span>
+            <span><%=current_user.first_name%>'s Dashboard</span>
           </h1>
         </div>
       </div>
