--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container">
 <div class="jumbotron">
      <div class="container">
        <h1>Welcome to Petrohub!</h1>
@@ -33,3 +33,4 @@
        <p>&copy; 2015 Petrohub</p>
      </footer>
    </div>
+ </div>
