Station button changed to nav pills

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,7 @@
 @import 'flatty/plugins/plugins';
 @import 'flatty/jquery/jquery_ui';
 @import 'flatty/dark-theme';
+
+.dash-tool {
+  margin-bottom: 20px;
+}
