--- a/app/views/retailers/transfers.html.erb
+++ b/app/views/retailers/transfers.html.erb
@@ -1,24 +1,4 @@
 
-
-<div class='row'>
-      <div class='col-sm-12'>
-        <div class='page-header'>
-          <h1 class='pull-left'>
-          Stations
-          </h1>
-        </div>
-        <div class="dash-tool">
-        <div class="btn-group" role="group" id="dash_tool"  aria-label="...">
-          <button type="button" class="btn btn-default"><%= link_to "My stations", retailer_my_stations_path %></button>
-          <button type="button" class="btn btn-default"><%= link_to "Inactive Stations", retailer_inactive_stations_path %></button>
-          <button type="button" class="btn btn-default"><%= link_to "Transfers", retailer_transfers_path %></button>
-          <button type="button" class="btn btn-success"><%= link_to new_station_path do %>
-                <i class='icon-plus'></i> Add Station</span>
-            <% end %></button>
-
-       </div>
-     </div>
-      </div>
-    </div>
+<%= render "my_stations"%>
 
 <h1> You dont have any Transfers </h1>
