--- a/app/views/stations/new.html.erb
+++ b/app/views/stations/new.html.erb
@@ -1,20 +1,6 @@
 
-<div class='row'>
-      <div class='col-sm-12'>
-        <div class='page-header'>
-          <h1 class='pull-left'>
-          Stations
-          </h1>
-        </div
-        <div class="dash-tool">
-        <div class="btn-group" role="group" aria-label="...">
-          <button type="button" class="btn btn-default"><%= link_to "My stations", retailer_my_stations_path %></button>
-          <button type="button" class="btn btn-default"><%= link_to "Inactive Stations", retailer_inactive_stations_path %></button>
-          <button type="button" class="btn btn-default"><%= link_to "Transfers", retailer_transfers_path %></button>
-       </div>
-     </div>
-      </div>
-    </div>
+
+<%= render "retailers/my_stations"%>
 <div class="col-md-4 col-md-offset-4">
     <div class="panel panel-default">
       <div class="panel-body">
