--- a/app/views/stations/show.html.erb
+++ b/app/views/stations/show.html.erb
@@ -1,23 +1,5 @@
 
-<div class='row'>
-      <div class='col-sm-12'>
-        <div class='page-header'>
-          <h1 class='pull-left'>
-          Stations
-          </h1>
-        </div>
-        <ul class="nav nav-pills">
-          <li role="presentation"><%= link_to "My stations", retailer_my_stations_path %></li>
-          <li role="presentation" ><%= link_to "Inactive Stations", retailer_inactive_stations_path %></li>
-          <li role="presentation"><%= link_to "Transfers", retailer_transfers_path %></li>
-          <li role="presentation" class="pull-right"> <%= link_to new_station_path do %>
-                <span class="btn btn-success"><i class='icon-plus'></i> Add Station</span>
-            <% end %>
-          </li>
-        </ul>
-      </div>
-    </div>
-
+<%= render "retailers/my_stations"%>
 
 <div class="jumbotron">
 <p id="notice"><%= notice %></p>
