--- a/app/views/retailers/_my_stations.html.erb
+++ b/app/views/retailers/_my_stations.html.erb
@@ -2,7 +2,8 @@
       <div class='col-sm-12'>
         <div class='page-header'>
           <h1 class='pull-left'>
-          Stations
+            <i class='icon-beer'></i>
+            <span>Your Stations</span>
           </h1>
         </div>
         <div class="dash-tool">
@@ -10,7 +11,7 @@
           <button type="button" class="btn btn-default"><%= link_to "My stations", retailer_my_stations_path %></button>
           <button type="button" class="btn btn-default"><%= link_to "Inactive Stations", retailer_inactive_stations_path %></button>
           <button type="button" class="btn btn-default"><%= link_to "Transfers", retailer_transfers_path %></button>
-          <button type="button" class="btn btn-success"><%= link_to new_station_path do %>
+          <button type="button" class="btn btn-default"><%= link_to new_station_path do %>
                 <i class='icon-plus'></i> Add Station</span>
             <% end %></button>
 
