--- a/app/views/retailers/my_stations.html.erb
+++ b/app/views/retailers/my_stations.html.erb
@@ -4,7 +4,7 @@
 
 <% @stations.each do |station| %>
               <div class="col-sm-12 box" style="margin-bottom: 0">
-                  <div class="box-header blue-background">
+                  <div class="box-header dark-background">
                     <div class="title"><%= station.brand %></div>
                     <div class="actions">
                         <%=link_to station_path(station) do %>
