Account number generation alogrith changed

--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -6,7 +6,7 @@
             <li class=''>
               <%= link_to retailer_dashboard_path do %>
                   <i class='icon-tasks'></i>
-                  <span class = "text-error">Account# <%=current_admin.account_number%></span>
+                  <span class = "text-error"><strong><%=current_admin.account_number%></strong></span>
               <% end %>
             </li>
             <li class=''>
