--- a/app/views/stations/show.html.erb
+++ b/app/views/stations/show.html.erb
@@ -68,6 +68,36 @@
   <strong>Retailer:</strong>
   <%= @station.retailer %>
 </p>
+<h2>Tanks</h2>
+<% @station.tanks.each do |comment| %>
+  <p>
+    <strong>Type of Fuel</strong>
+    <%= tank.type_of_fuel %>
+  </p>
+
+  <p>
+    <strong>Size</strong>
+    <%= tank.size %>
+  </p>
+  <p>
+    <strong>Registration ID</strong>
+    <%= tank.registration_id %>
+  </p>
+<% end %>
+
+<h2>Add a comment:</h2>
+<%= simple_form_for([@station, @station.tanks.build]) do |f| %>
+<div class="form-inputs">
+  <%= f.input :type_of_fuel, label: "Fuel Type"%>
+  <%= f.input :size, label: "Size" %>
+  <%= f.input :registration_id, label: "Tank Registration ID"%>
+  <%= f.association :station, :as => :hidden %>
+</div>
+
+<div class="form-actions">
+  <%= f.button :submit, class: "btn btn-primary" %>
+</div>
+<% end %>
 
 <%= link_to 'Edit', edit_station_path(@station) %> |
 <%= link_to 'Back', stations_path %>
