--- a/app/views/stations/show.html.erb
+++ b/app/views/stations/show.html.erb
@@ -3,88 +3,231 @@
 
 <div class="jumbotron">
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Brand:</strong>
-  <%= @station.brand %>
-</p>
-
-<p>
-  <strong>Business name:</strong>
-  <%= @station.business_name %>
-</p>
-
-<p>
-  <strong>Tax:</strong>
-  <%= @station.tax_id %>
-</p>
-
-<p>
-  <strong>Phone number:</strong>
-  <%= @station.phone_number %>
-</p>
-
-<p>
-  <strong>Contact person:</strong>
-  <%= @station.contact_person %>
-</p>
-
-<p>
-  <strong>Cell number:</strong>
-  <%= @station.cell_number %>
-</p>
-
-<p>
-  <strong>Address1:</strong>
-  <%= @station.address1 %>
-</p>
-
-<p>
-  <strong>Address2:</strong>
-  <%= @station.address2 %>
-</p>
-
-<p>
-  <strong>City:</strong>
-  <%= @station.city %>
-</p>
-
-<p>
-  <strong>State:</strong>
-  <%= @station.state %>
-</p>
-
-<p>
-  <strong>Zip:</strong>
-  <%= @station.zip %>
-</p>
-
-<p>
-  <strong>Station reg number:</strong>
-  <%= @station.station_reg_number %>
-</p>
-
-<p>
-  <strong>Retailer:</strong>
-  <%= @station.retailer %>
-</p>
-</div>
-<h2>Tanks</h2>
-<% @station.tanks.each do |comment| %>
-  <p>
-    <strong>Type of Fuel</strong>
-    <%= tank.type_of_fuel %>
-  </p>
-
-  <p>
-    <strong>Size</strong>
-    <%= tank.size %>
-  </p>
-  <p>
-    <strong>Registration ID</strong>
-    <%= tank.registration_id %>
-  </p>
-<% end %>
+<div class="row invoice">
+                <div class="col-sm-12">
+                  <div class="box">
+                    <div class="box-content box-double-padding">
+                      <div class="row">
+                        <div class="invoice-header">
+                          <div class="invoice-title">
+                            <%=@station.brand%>
+                          </div>
+                          <div class="invoice-number">
+                            <span class="invoice-name"><%= @station.business_name%></span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-sm-4 seller">
+                          <div class="lead text-contrast">Details</div>
+                          <i class="icon-globe"></i>
+                          <address>
+                            <strong>Brand:</strong> <strong><%= @station.brand %></strong>
+                            <br>
+                            <strong>No. of tanks:</strong> <%=@station.tanks.all.count%>
+                            <br>
+                            <strong>DBA:</strong> <%= @station.business_name %>
+                            <br>
+                             <strong>Tax ID:</strong> <%= @station.tax_id %>
+                            <br>
+                            <br>
+                            <strong>Contact Person:</strong> <small><%= @station.contact_person %></small>
+                            <br>
+                            <small><%= @station.cell_number %></small>
+                          </address>
+                        </div>
+                        <div class="col-sm-4 buyer">
+                          <div class="lead text-contrast">To</div>
+                          <i class="icon-globe"></i>
+                          <address>
+                            <strong>Current Owner:</strong> <strong><%= @station.retailer.first_name + " " + @station.retailer.last_name %></strong>
+                            <br>
+                            <strong>Store Phone: </strong><%= @station.phone_number %>
+                            <br>
+                            <strong>Address:</strong><%= @station.address1 %>
+                            <br>
+                            <strong>city:</strong><%= @station.city %>
+                            <br>
+                            <strong>State:</strong><%= @station.state %>
+                            <br>
+                            <small><a href="mailto:jane@doe.com">jane@doe.com</a></small>
+                            <br>
+                             <strong>Registration No.</strong><small><%= @station.station_reg_number%></small>
+                          </address>
+                        </div>
+                        <div class="col-sm-4 info">
+                          <div class="lead text-muted">Info</div>
+                            Created at:
+                          <strong><%= @station.created_at.strftime("%d %b. %Y")%></strong>
+                          <br>
+                          Updated:
+                          <strong><%= time_ago_in_words(@station.updated_at) %> ago by <%= @station.retailer.first_name %></strong>
+                        </div>
+                      </div>
+                      <hr class="hr-drouble">
+                      <div class="row">
+                        <div class="col-sm-12">
+                          <div class="responsive-table">
+                            <div class="scrollable-area">
+                              <table class="table table-striped table-hover table-bordered">
+                                <thead>
+                                  <tr>
+                                    <th>Order#</th>
+                                    <th>Fuel Type</th>
+                                    <th>
+                                      <div class="text-center">Qty</div>
+                                    </th>
+                                    <th>
+                                      <div class="text-right">Price</div>
+                                    </th>
+                                    <th>
+                                      <div class="text-right">Price total</div>
+                                    </th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <td>1</td>
+                                    <td>89</td>
+                                    <td>
+                                      <div class="text-center">1</div>
+                                    </td>
+                                    <td>
+                                      <div class="text-right">$302.00</div>
+                                    </td>
+                                    <td>
+                                      <div class="text-right">$302.00</div>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td>2</td>
+                                    <td>95</td>
+                                    <td>
+                                      <div class="text-center">4</div>
+                                    </td>
+                                    <td>
+                                      <div class="text-right">$486.00</div>
+                                    </td>
+                                    <td>
+                                      <div class="text-right">$1,944.00</div>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td>3</td>
+                                    <td>99</td>
+                                    <td>
+                                      <div class="text-center">1</div>
+                                    </td>
+                                    <td>
+                                      <div class="text-right">$360.00</div>
+                                    </td>
+                                    <td>
+                                      <div class="text-right">$360.00</div>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td>4</td>
+                                    <td>85</td>
+                                    <td>
+                                      <div class="text-center">4</div>
+                                    </td>
+                                    <td>
+                                      <div class="text-right">$250.00</div>
+                                    </td>
+                                    <td>
+                                      <div class="text-right">$1,000.00</div>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td>5</td>
+                                    <td>Diesel</td>
+                                    <td>
+                                      <div class="text-center">2</div>
+                                    </td>
+                                    <td>
+                                      <div class="text-right">$377.00</div>
+                                    </td>
+                                    <td>
+                                      <div class="text-right">$754.00</div>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td>6</td>
+                                    <td>Diesel</td>
+                                    <td>
+                                      <div class="text-center">3</div>
+                                    </td>
+                                    <td>
+                                      <div class="text-right">$107.00</div>
+                                    </td>
+                                    <td>
+                                      <div class="text-right">$321.00</div>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <hr class="hr-normal">
+                      <div class="row">
+                        <div class="col-sm-12">
+                          <div class="text-right text-contrast subtotal">
+                            <div class="btn btn-success"> Create New Order </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-sm-12">
+                          <div class="well comment">
+                            Current Order Progress
+                            <div class="progress">
+                               <div class="progress-bar progress-bar-danger" style="width:70%;"><strong>60%</strong></div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <hr class="hr-drouble">
+<div class="row">
+  <% count = 1 %>
+    <% @station.tanks.each do |i| %>
+                <div class="col-sm-6 col-md-3">
+                  <div class="box">
+                    <div class="box-header">
+                      <div class="title">
+                        <i class="icon-inbox"></i>
+                        Tank <%= count %>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-12">
+                        <div class="box-content box-statistic">
+                          <h3 class="title text-error"><%= i.type_of_fuel %></h3>
+                          <small>Fuel Type</small>
+                          <div class="text-error icon-tint align-right"></div>
+                        </div>
+                        <div class="box-content box-statistic">
+                          <h3 class="title text-warning"><%= i.size %></h3>
+                          <small>Size</small>
+                          <div class="text-warning icon-filter align-right"></div>
+                        </div>
+                        <div class="box-content box-statistic">
+                          <h3 class="title text-primary"><%= i.registration_id %></h3>
+                          <small>Tank Registration No.</small>
+                          <div class="text-primary icon-edit align-right"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <% count += 1 %>
+                <% end %>
+              </div>
 
 <h2>Add a Tank</h2>
 <%= simple_form_for([@station, @station.tanks.build]) do |f| %>
