Tank gallons edited

--- a/app/views/stations/show.html.erb
+++ b/app/views/stations/show.html.erb
@@ -212,7 +212,7 @@
                           <div class="text-error icon-tint align-right"></div>
                         </div>
                         <div class="box-content box-statistic">
-                          <h3 class="title text-warning"><%= i.size %></h3>
+                          <h3 class="title text-warning"><%= i.size %> Gallons</h3>
                           <small>Size</small>
                           <div class="text-warning icon-filter align-right"></div>
                         </div>
