--- a/app/views/stations/show.html.erb
+++ b/app/views/stations/show.html.erb
@@ -37,7 +37,7 @@
                           </address>
                         </div>
                         <div class="col-sm-4 buyer">
-                          <div class="lead text-contrast">To</div>
+                          <div class="lead text-contrast"></div>
                           <i class="icon-globe"></i>
                           <address>
                             <strong>Current Owner:</strong> <strong><%= @station.retailer.first_name + " " + @station.retailer.last_name %></strong>
