--- a/app/views/stations/show.html.erb
+++ b/app/views/stations/show.html.erb
@@ -11,6 +11,9 @@
                         <div class="invoice-header">
                           <div class="invoice-title">
                             <%=@station.brand%>
+                            <%= link_to edit_station_path(@station) do %>
+                            <i class="icon-wrench"></i>
+                            <%end%>
                           </div>
                           <div class="invoice-number">
                             <span class="invoice-name"><%= @station.business_name%></span>
@@ -203,6 +206,11 @@
                         <i class="icon-inbox"></i>
                         Tank <%= count %>
                       </div>
+                      <div class='pull-right'>
+                        <%= link_to edit_station_tank_path(@station, i) do %>
+                        <i class="icon-wrench"></i>
+                        <%end%>
+                      </div>
                     </div>
                     <div class="row">
                       <div class="col-sm-12">
@@ -229,19 +237,4 @@
                 <% end %>
               </div>
 
-<h2>Add a Tank</h2>
-<%= simple_form_for([@station, @station.tanks.build]) do |f| %>
-<div class="form-inputs">
-  <%= f.input :type_of_fuel, label: "Fuel Type"%>
-  <%= f.input :size, label: "Size" %>
-  <%= f.input :registration_id, label: "Tank Registration ID"%>
-  <%= f.association :station, :as => :hidden %>
-</div>
-
-<div class="form-actions">
-  <%= f.button :submit, class: "btn btn-primary" %>
-</div>
-<% end %>
-
-<%= link_to 'Edit', edit_station_path(@station) %> |
-<%= link_to 'Back', stations_path %>
+<%= link_to "Add Tank", new_station_tank_path(@station), class: "btn btn-primary" %>
