--- a/app/views/tanks/new.html.erb
+++ b/app/views/tanks/new.html.erb
@@ -1,4 +1,5 @@
-<h1>New Tank</h1>
-
+<%= render 'retailers/my_stations'%>
 <%= render 'form' %>
-<%= link_to "Back", station_tanks_path(@station, @tanks)%>
+
+
+<%= link_to "Back", station_path(@station)%>
