Added images of gas station logos

--- a/app/views/retailers/my_stations.html.erb
+++ b/app/views/retailers/my_stations.html.erb
@@ -15,8 +15,7 @@
                     </div>
                   </div>
                   <div class="box-content">
-                      <img class="img-responsive" src="http://placehold.it/230x230&amp;text=Photo">
-                    <%= station.business_name %>
+                    <%= image_for(station)%>
                   </div>
                 </div>
 <%end%>
