--- a/app/views/stations/show.html.erb
+++ b/app/views/stations/show.html.erb
@@ -216,17 +216,15 @@
                       <div class="col-sm-12">
                         <div class="box-content box-statistic">
                           <h3 class="title text-error"><%= i.type_of_fuel %></h3>
-                          <small>Fuel Type</small>
                           <div class="text-error icon-tint align-right"></div>
                         </div>
                         <div class="box-content box-statistic">
                           <h3 class="title text-warning"><%= i.size %> Gallons</h3>
-                          <small>Size</small>
                           <div class="text-warning icon-filter align-right"></div>
                         </div>
                         <div class="box-content box-statistic">
+                          <small>Registration No.</small>
                           <h3 class="title text-primary"><%= i.registration_id %></h3>
-                          <small>Tank Registration No.</small>
                           <div class="text-primary icon-edit align-right"></div>
                         </div>
                       </div>
