Added line bread between the stations

--- a/app/views/retailers/my_stations.html.erb
+++ b/app/views/retailers/my_stations.html.erb
@@ -18,4 +18,5 @@
                     <%= image_for(station)%>
                   </div>
                 </div>
+                  <hr class="hr-drouble">
 <%end%>
