--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,3 +7,6 @@
 .dash-tool {
   margin-bottom: 20px;
 }
+
+.station-image {display:inline-block;margin-right:10px; width:230px;}
+.station-data {float:right;margin-left:10px;width: 1000px;background-color:red;} 
