--- a/app/views/retailers/my_stations.html.erb
+++ b/app/views/retailers/my_stations.html.erb
@@ -15,7 +15,9 @@
                     </div>
                   </div>
                   <div class="box-content">
-                    <%= image_for(station)%>
+                  <div class="station-image"><%= image_for(station)%></div>
+                  <div class="station-data">
+                  
                   </div>
                 </div>
                   <hr class="hr-drouble">
