Connection between retailers and suppliers in progress

--- a/app/views/layouts/_retailer_sidebar.html.erb
+++ b/app/views/layouts/_retailer_sidebar.html.erb
@@ -23,7 +23,7 @@
             </li>
 
             <li class=''>
-              <%= link_to retailer_my_stations_path do %>
+              <%= link_to retailer_suppliers_path do %>
                   <i class='icon-group'></i>
                   <span>My Suppliers</span>
               <% end %>
