--- a/app/views/retailers/inactive_stations.html.erb
+++ b/app/views/retailers/inactive_stations.html.erb
@@ -1,6 +1,5 @@
-
-
 <%= render "my_stations"%>
 
-
-<h1> You dont have any inactive stations </h1>
+<h1>
+  You dont have any inactive stations
+</h1>
