--- a/app/views/tanks/show.html.erb
+++ b/app/views/tanks/show.html.erb
@@ -20,5 +20,6 @@
   <%= @tank.station %>
 </p>
 
-<%= link_to 'Edit', edit_station_tank_path(@station,@tank) %> |
+<%= link_to 'Edit', edit_station_tank_path(@station,@tank) %>
+|
 <%= link_to 'Back', station_tanks_path(@station) %>
