--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="col-md-4 col-md-offset-4">
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+  <h2>Edit
+    <%= resource_name.to_s.humanize %></h2>
 
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
@@ -18,9 +18,9 @@
     <%= f.input :address1 ,disabled: true %>
     <%= f.input :address2,disabled: true %>
     <%= f.input :city,disabled: true%>
-    <div class = "form-group">
-    <%= f.input :state, :label => "State", :collection => us_states, :selected => "New Jersey",disabled: true%>
-  </div>
+    <div class="form-group">
+      <%= f.input :state, :label => "State", :collection => us_states, :selected => "New Jersey",disabled: true%>
+    </div>
     <%= f.input :zip_code, disabled: true%>
     <%= f.input :years_in_business,disabled: true%>
   </div>
@@ -28,7 +28,7 @@
   <div class="form-actions">
     <%= f.button :submit, "Update" %>
   </div>
-<% end %>
+  <% end %>
 
-<%= link_to "Back", :back %>
+  <%= link_to "Back", :back %>
 </div>
