--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,16 @@
 <div class="container">
-<div class="jumbotron">
-     <div class="container">
-       <h1>Welcome to Petrohub!</h1>
-       <p>We make your everyday Gas orders and supply Very easy and smooth.</p>
-       <p><a class="btn btn-primary btn-lg" href="/pages/about" role="button">Learn more &raquo;</a></p>
-     </div>
-   </div>
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Welcome to Petrohub!</h1>
+      <p>We make your everyday Gas orders and supply Very easy and smooth.</p>
+      <p>
+        <a class="btn btn-primary btn-lg" href="/pages/about" role="button">Learn more &raquo;</a>
+      </p>
+    </div>
+  </div>
 
-   <div class="container">
-     <!-- Example row of columns
+  <div class="container">
+    <!-- Example row of columns
      <div class="row">
        <div class="col-md-4">
          <h2>Why us?</h2>
@@ -27,10 +29,10 @@
        </div>
      </div>
 -->
-     <hr>
+    <hr>
 
-     <footer>
-       <p>&copy; 2015 Petrohub</p>
-     </footer>
-   </div>
- </div>
+    <footer>
+      <p>&copy; 2015 Petrohub</p>
+    </footer>
+  </div>
+</div>
