--- a/app/views/stations/edit.html.erb
+++ b/app/views/stations/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @station %> |
+<%= link_to 'Show', @station %>
+|
 <%= link_to 'Back', stations_path %>
